--- a/personalwebsite.css
+++ b/personalwebsite.css
@@ -1,83 +1,13 @@
 * {
-  padding: 0%;
-  margin: 0%;
   box-sizing: border-box;
-}
-
-/*html { 
-  background: url(https://volcano.si.edu/gallery/photos/GVP-05525.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}*/
-
-.container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 10fr 1fr;
-  gap: 0.5rem;
-  min-height: 100vh;
-}
-
-.mainbox {
-  display: grid;
+  font-family: 'Abel', sans-serif;
 }
 
 body {
-  font-family: "Abel", "Times New Roman", Times, serif;
-}
-.box1 {
-  grid-column: 1 / 4;
-  opacity: 90%;
-  color: black;
-}
-.lists {
-  display: flex;
-  justify-content: flex-end;
-
-  list-style-type: none;
-  position: absolute;
-  right: 2%;
-  top: 2%;
+  margin: 0;
+  font-family: 'Abel', sans-serif;
 }
 
-h4 {
-  position: absolute;
-  left: 2%;
-  top: 2%;
-}
-h2 {
-  padding-top: 10vh;
-  text-align: center;
-  
-}
-a {
-  color: black;
-  opacity: 90%;
-}
-
-#name {
-  color: black;
-  opacity: 75%;
-}
-
-.box4 {
-  color: black;
-  grid-column-start: 1;
-  grid-column-end: 4;
-  height: 10%;
-  text-align: center;
-}
-
-li {
-  display: inline-block;
-  list-style-type: none;
-  margin-left: 10%;
-  margin-right: 10%;
-  text-align: justify;
-}
-
-.slides {
-  display: none;
+.topnav {
+  overflow: hidden;
 }
