--- a/personalwebsite.css
+++ b/personalwebsite.css
@@ -1,13 +1,83 @@
 * {
   box-sizing: border-box;
-  font-family: 'Abel', sans-serif;
+  font-family: "Abel", sans-serif;
+  color: white;
 }
 
+/* i want the photo to be included in the slideshow, which goes in the .main but I also want it to encompass the entire page
+if i put it in the html, could i set the slideshow in there?
+if i put it in the main should I set it to the entire page?
+*/
+html {
+  background: url(https://volcano.si.edu/gallery/photos/GVP-05525.jpg) no-repeat
+    center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+}
 body {
   margin: 0;
-  font-family: 'Abel', sans-serif;
+  font-family: "Abel", sans-serif;
 }
 
-.topnav {
+header {
+  display: inline-flex;
   overflow: hidden;
+  background-color: transparent;
+  padding: 5%;
+  color: grey;
+  width: 100vw;
+  text-align: right;
+}
+#name {
+  text-align: left;
+  font-size: 30px;
+}
+ul {
+  list-style-type: none;
+  width: 100%;
+}
+li {
+  display: inline-block;
+  margin-right: 5%;
+  font-size: 20px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  padding: 5%;
+  gap: 5%;
+}
+.main1 {
+  background-size: cover;
+  text-align: center;
+}
+.main2 {
+  text-align: center;
+}
+a {
+  text-decoration: none;
+}
+a:hover {
+  color: darkolivegreen;
+  font-size: large;
+}
+
+.grid-container > div,
+.hiddenContent > [name="content2"] {
+  display: none;
+}
+
+.grid-container > div:target {
+  display: block;
+}
+
+.inter {
+  margin-bottom: 100vh;
+}
+
+footer {
+  text-align: center;
 }
