--- a/personalwebsite.css
+++ b/personalwebsite.css
@@ -13,7 +13,7 @@ html {
     center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  -o-background-size: cover;
+  background-size: cover;
 }
 body {
   margin: 0;
@@ -57,6 +57,12 @@ li {
 .main2 {
   text-align: center;
 }
+.main3 {
+  text-align: center;
+}
+.main4 {
+  text-align: center;
+}
 a {
   text-decoration: none;
 }
@@ -66,7 +72,7 @@ a:hover {
 }
 
 .grid-container > div,
-.hiddenContent > [name="content2"] {
+.hiddenContent > [name="content4"] {
   display: none;
 }
 
